--- a/www/templates/orders.html
+++ b/www/templates/orders.html
@@ -1,53 +1,49 @@
 <ion-view view-title="My Orders">
-    <div class="tabs-striped tabs-background-balanced tabs-color-light">
-        <div class="tabs">
-            <a class="tab-item" ng-click="tabvalue = 1;" ng-class="{'active': tabvalue == 1}">
+   <div class="tabs-striped tabs-background-balanced tabs-color-light">
+      <div class="tabs">
+         <a class="tab-item" ng-click="tabvalue = 1;" ng-class="{'active': tabvalue == 1}">
         My Purchase
       </a>
-            <a class="tab-item" ng-click="tabvalue = 2;" ng-class="{'active': tabvalue == 2}">
+         <a class="tab-item" ng-click="tabvalue = 2;" ng-class="{'active': tabvalue == 2}">
         My Sale
       </a>
-        </div>
-    </div>
-    <ion-content class="padding has-tabs-top">
-        <div class="incard">
-            <div class="list" ng-if="tabvalue == 1" ng-if="mypurchase.length>0">
-                <div class="item item-thumbnail-left" ng-click="openpurchase(p);" ng-repeat="p in mypurchase">
-                    <img ng-src={{p.productimage|serverimage}}>
-                    <h3 class="leftnames">Name: <span>{{p.productname}}</span></h2>
+      </div>
+   </div>
+   <ion-content class="padding">
+      <div class="incard">
+         <div class="list" ng-if="tabvalue == 1" ng-if="mypurchase.length>0">
+            <div class="item item-thumbnail-left" ng-click="openpurchase(p);" ng-repeat="p in mypurchase">
+               <img ng-src={{p.productimage|serverimage}}>
+               <h3 class="leftnames">Name: <span>{{p.productname}}</span></h2>
                     <h3 class="leftnames">Price: <span>{{p.price}}</span></h3>
-                    <h3 class="leftnames">Order ID: <span>{{p.id}}</span></h3>
-                    <h3 class="leftnames">Status: <span>{{p.orderstatusname}}</span></h3>
-                </div>
+               <h3 class="leftnames">Order ID: <span>{{p.id}}</span></h3>
+               <h3 class="leftnames">Status: <span>{{p.orderstatusname}}</span></h3>
             </div>
-            <div class="incard" ng-if="mypurchase.length==0 && tabvalue == 1">
-                <div class="list">
-                    <div class="text-center royal padding">
-                        <figure>
-                            <img src="img/nopr.jpg" class="full-image" style="width:110px;">
-                        </figure>
-                    </div>
-                </div>
+         </div>
+         <div class="list" ng-if="mypurchase.length==0 && tabvalue == 1">
+            <div class="text-center royal padding">
+               <figure>
+                  <img src="img/nopr.jpg" class="full-image" style="width:110px;">
+               </figure>
             </div>
-            <div class="list" ng-if="tabvalue == 2" ng-if="ordr.length>0">
-                <!--                <div class="item item-thumbnail-left bod-bottom" ng-repeat="o in ordr">-->
-                <div class="item item-thumbnail-left" ng-click="opensale(o);" ng-repeat="o in ordr">
-                    <img ng-src={{o.productimage|serverimage}}>
-                    <h3 class="leftnames">Name: <span>{{o.productname}}</span></h3>
-                    <h3 class="leftnames">Price: <span>{{o.price}}</span></h3>
-                    <h3 class="leftnames">Order ID: <span>{{o.id}}</span></h3>
-                    <h3 class="leftnames">Status: <span>{{o.orderstatusname}}</span></h3>
-                </div>
+         </div>
+         <div class="list" ng-if="tabvalue == 2" ng-if="ordr.length>0">
+            <!--                <div class="item item-thumbnail-left bod-bottom" ng-repeat="o in ordr">-->
+            <div class="item item-thumbnail-left" ng-click="opensale(o);" ng-repeat="o in ordr">
+               <img ng-src={{o.productimage|serverimage}}>
+               <h3 class="leftnames">Name: <span>{{o.productname}}</span></h3>
+               <h3 class="leftnames">Price: <span>{{o.price}}</span></h3>
+               <h3 class="leftnames">Order ID: <span>{{o.id}}</span></h3>
+               <h3 class="leftnames">Status: <span>{{o.orderstatusname}}</span></h3>
             </div>
-            <div class="incard" ng-if="ordr.length==0 && tabvalue == 2">
-                <div class="list">
-                    <div class="text-center royal padding">
-                        <figure>
-                            <img src="img/nosale.jpg" class="full-image" style="width:110px;">
-                        </figure>
-                    </div>
-                </div>
+         </div>
+         <div class="list" ng-if="ordr.length==0 && tabvalue == 2">
+            <div class="text-center royal padding">
+               <figure>
+                  <img src="img/nosale.jpg" class="full-image" style="width:110px;">
+               </figure>
             </div>
-        </div>
-    </ion-content>
+         </div>
+      </div>
+   </ion-content>
 </ion-view>
