--- a/www/templates/image-modal.html
+++ b/www/templates/image-modal.html
@@ -1,6 +1,6 @@
 <div class="modal image-modal transparent" ng-click="closeModal()">
     <div class="modal image-modal transparent" ng-click="closeModal()">
-        <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false">
+        <ion-slide-box on-slide-changed="slideChanged(index)">
             <ion-slide ng-repeat="s in shoppic">
                 <img ng-src="{{s.photo|serverimage}}" class="fullscreen-image" />
                 <!--                <p class="info">{{oImage.msg}}</p>-->
