--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9167,3 +9167,10 @@ ul, .my-balcont ul {
   margin: 0 10px; }
   .space input {
     width: 100%; }
+
+.strong-tabs {
+  background-color: #F78330; }
+  .strong-tabs .tab-item {
+    font-weight: bold;
+    font-size: 16px;
+    text-transform: uppercase; }
