--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9193,3 +9193,21 @@ ul, .my-balcont ul {
     background-size: cover;
     background-position: center;
     border: 1px solid #eaeaea; }
+
+.brdr-select .item-input input {
+  border: 1px solid #F78330;
+  text-align: right;
+  padding: 0;
+  border-radius: 0;
+  position: absolute;
+  top: 5px;
+  right: 13px;
+  width: 47%; }
+
+.brdr-select .item-select select {
+  width: 47%;
+  border: 1px solid #F78330;
+  border-radius: 0;
+  margin: 3px;
+  padding-right: 15px;
+  right: 10px; }
