--- a/www/templates/home-hotel.html
+++ b/www/templates/home-hotel.html
@@ -1,6 +1,8 @@
-<ion-view view-title="Find Hotels">
+<ion-view view-title="Hotels">
     <ion-content class="padding">
-        <div class="incard">
+        <div class="incard  brdr-select">
+          <div class="header-card">Find Hotels</div>
+
             <div class="list">
 
                 <label class="item item-input item-select">
