--- a/www/templates/product.html
+++ b/www/templates/product.html
@@ -1,8 +1,12 @@
 <ion-view view-title="Products">
 
-     <!-- <ion-nav-buttons side="right">
-        <button class="button button-icon ion-arrow-swap small-icon arrows" ng-click="opensort();"></button>
-    </ion-nav-buttons> -->
+  <ion-nav-buttons side="right">
+    <div class="dh-relative">
+      <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
+      <span class="badge badge-assertive btn-set span-abs">0</span>
+    </div>
+
+  </ion-nav-buttons>
     <ion-content class="padding">
         <div class="incard">
             <div class="header-card">Online Search</div>
