--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -1,4 +1,11 @@
 <ion-view title="Checkout">
+  <ion-nav-buttons side="right">
+    <div class="dh-relative">
+      <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
+      <span class="badge badge-assertive btn-set span-abs">0</span>
+    </div>
+
+  </ion-nav-buttons>
     <ion-content class="has-header">
         <!--        <form ng-submit="continuepayment(form);">-->
         <div class="header-card">Shipping Information</div>
@@ -32,10 +39,10 @@
                     <span class="input-label">State*</span>
                     <input class="text-right" type="text" placeholder="State" ng-model="form.billingstate" ng-class="allvalidation[6].validation" required>
                 </div>
-                <div class="item item-input text-capitalize">
+                <!-- <div class="item item-input text-capitalize">
                     <span class="input-label">Country*</span>
                     <input class="text-right" type="text" placeholder="Country" ng-model="form.billingcountry" ng-class="allvalidation[7].validation" required>
-                </div>
+                </div> -->
                 <div class="item item-input text-capitalize">
                     <span class="input-label">Quantity*</span>
                     <input class="text-right" type="tel" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>
