--- a/www/templates/myproducts.html
+++ b/www/templates/myproducts.html
@@ -1,5 +1,9 @@
 <ion-view view-title="My Products">
     <ion-nav-buttons side="right">
+      <div class="dh-relative">
+        <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
+        <span class="badge badge-assertive btn-set span-abs">0</span>
+      </div>
         <button class="button button-icon ion-plus-round small-icon" ng-click="openedit();"></button>
     </ion-nav-buttons>
 
