--- a/www/templates/orders.html
+++ b/www/templates/orders.html
@@ -1,4 +1,11 @@
 <ion-view view-title="My Orders">
+  <ion-nav-buttons side="right">
+    <div class="dh-relative">
+      <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
+      <span class="badge badge-assertive btn-set span-abs">0</span>
+    </div>
+    
+  </ion-nav-buttons>
    <div class="tabs-striped tabs-background-balanced tabs-color-light">
       <div class="tabs">
          <a class="tab-item" ng-click="tabvalue = 1;" ng-class="{'active': tabvalue == 1}">
