--- a/www/templates/productdetails.html
+++ b/www/templates/productdetails.html
@@ -1,5 +1,13 @@
 <ion-modal-view>
+  <ion-nav-buttons side="right">
+    <div class="dh-relative">
+      <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
+      <span class="badge badge-assertive btn-set span-abs">0</span>
+    </div>
+
+  </ion-nav-buttons>
     <ion-header-bar class="bar-royal" align-title="center">
+
         <div class="buttons">
             <button class="button button-clear" ng-click="closeprdtdetails()">Close</button>
         </div>
@@ -58,7 +66,7 @@
                 </div>
                 <div class="item item-input item-text-wrap">
                     <div class="input itemproducts">
-                       <p>{{prodetails.description}}</p> 
+                       <p>{{prodetails.description}}</p>
                     </div>
                 </div>
             </div>
