--- a/www/templates/selling.html
+++ b/www/templates/selling.html
@@ -1,4 +1,11 @@
 <ion-view view-title="Selling Approval">
+  <ion-nav-buttons side="right">
+    <div class="dh-relative">
+      <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
+      <span class="badge badge-assertive btn-set span-abs">0</span>
+    </div>
+
+  </ion-nav-buttons>
     <ion-content class="padding">
         <div class="incard" ng-if="req.length==0">
             <div class="list">
